--- a/css/VLTE_plotter.css
+++ b/css/VLTE_plotter.css
@@ -10,6 +10,11 @@ body {
   margin: 0;
 }
 
+#intro_p {
+  margin: 0px auto;
+  width: 80%;
+}
+
 #page_title {
   text-align: center;
 }
@@ -66,7 +71,7 @@ body {
   top:0px;
   left:550px;
   height: 250px;
-  width: 270px;
+  width: 250px;
   padding-left:10px;
   hyphens:auto;
 }
@@ -82,9 +87,9 @@ body {
 #pop_info {
   position: absolute;
   top: 0px;
-  left: 100px;
+  left: 50px;
   height: 50px;
-  width: 400px;
+  width: 350px;
   padding-left:10px;
 }
 
@@ -103,9 +108,9 @@ body {
 #searches_etc {
   position: absolute;
   top: 0px;
-  left: 500px;
+  left: 300px;
   height: 50px;
-  width: 1000px;
+  width: 1200px;
 }
 
 #overlay_button_div {
